--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
+body,
+html {
+  overflow: hidden;
+}
+
 #home-header {
   text-align: center;
   margin: 50px 0;
@@ -9,19 +14,22 @@
   width: 1000px;
   margin: 0 20px;
 }
+
 #plane-img {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
-  transition: transform 0.3s ease; /* Added a smooth transition effect */
+  z-index: 2; /* Increased z-index value */
+  transition: left 5s ease; /* Adjusted the transition property for a slower fly-off animation */
 }
+
 #sky-bg {
   width: 100%;
   height: 100%;
   border-radius: 200px;
 }
+
 @keyframes hoverUpDown {
   0%,
   100% {
@@ -31,6 +39,11 @@
     transform: translate(-50%, -60%);
   }
 }
-#plane-img {
-  animation: hoverUpDown 5s infinite;
+
+#plane-img.hovering {
+  animation: hoverUpDown 5s infinite; /* Restored the infinite hover animation */
+}
+
+#plane-img.fly-off {
+  left: 200%; /* Move the image off to the right side beyond the container's width */
 }
